--- a/src/assets/less/style/block/footer.less
+++ b/src/assets/less/style/block/footer.less
@@ -108,6 +108,15 @@ footer {
     background-color: #f8f8f8;
     display: inline-block;
     width: 100%;
+    .row {
+        display: -webkit-flex;
+        display: flex;
+        -webkit-flex-direction: row;
+        flex-direction: row;
+        -webkit-flex-wrap: wrap;
+        flex-wrap: wrap;
+        
+    }
 }
 
 footer .scrollup {
