--- a/src/views/block/_footer.html
+++ b/src/views/block/_footer.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-xs-6">
                 <h4>Về Fujiyama</h4>
                 <ul>
                     <li><a href="javascript:void();" title="">Hệ thống trung tâm/ Cữa hàng</a>
@@ -17,7 +17,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-3 padding col-sm-6">
+            <div class="col-md-3 padding col-xs-6">
                 <h4>Hỗ trợ khách hàng</h4>
                 <ul>
                     <li><a href="javascript:void();" title="">Hướng dẫn mua hàng</a>
@@ -31,7 +31,7 @@
                     
                 </ul>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-xs-6">
                 <h4>Tổng đài hỗ trợ</h4>
                 <span class="note">(1000đ/Phút; 08h-22h, kể cả T7, CN)</span>
                 <p class="telephone"><a href="tel:1900 1829" title="" target="_blank">1900 1829</a></p>
@@ -43,7 +43,7 @@
                     <li>- Hướng dẫn chung: Bấm phím  <b class="red">(0)</b></li>
                 </ul>
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-md-3 col-xs-6">
                 <div class="connect-mymall">
                     <h4>Kết nối với Fujiyama</h4>
                     <p><img src="assets/images/imgfb.jpg" alt=""></p>
