--- a/src/assets/less/style/block/header.less
+++ b/src/assets/less/style/block/header.less
@@ -1,4 +1,4 @@
-header {
+// header {
     .logo {
         margin-top: 17px;
     }
@@ -94,7 +94,7 @@ header {
     .owl-controls {
         display: none !important;
     }
-}
+// }
 // mennu mobile
 
 .header {
@@ -106,16 +106,14 @@ header {
 }
 
 .header {
-    background: #252f3f;
     font-size: 16px;
     font-weight: bold;
     color: #fff;
-    line-height: 64px;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     width: 100%;
     height: auto;
-    padding: 0 50px;
+    // padding: 0 50px;
 }
 
 .header.fixed {
@@ -138,27 +136,32 @@ header {
 }
 .header-mobile.header-category .header a.mmenu {
     display: block;
-    width: 50px;
-    height: 18px;
+    width: 105px;
     padding: 11px;
+    padding-bottom: 0;
     position: absolute;
-    top: 15px;
+    top: 124px;
     left: 10px;
+    z-index: 2;
+    font-size: 16px;
+    background: #ddd;
+    cursor: pointer;
 }
 
-.header-mobile.header-category .header a.mmenu:before,
-.header-mobile.header-category .header a.mmenu:after {
-    content: '';
-    display: block;
-    background: #fff;
-    height: 2px;
-}
-
-.header-mobile.header-category .header a.mmenu span {
-    background: #fff;
-    display: block;
-    height: 2px;
-    margin: 6px 0;
+.header-mobile.header-category .header a.mmenu {
+    i {
+        float: left;
+        color: @primary-color;
+        font-size: 20px;
+    }
+    span {
+        position: relative;
+        top: -5px;
+        color: @primary-color;
+        display: block;
+        margin: 6px 0;
+        text-transform: uppercase;
+    }
 }
 
 .mm-menu {
@@ -169,14 +172,28 @@ header {
                 color: #fff;
                 text-transform: uppercase;
                 float: left;
+                width: 100%;
+            }
+            &.title {
+                background: rgba(0, 0, 0, 0.42);
             }
         }
+    }
+    .checkbox label {
+        color: #fff;
     }
 }
 .mm-listitem {
     position: relative;
     display: inline-block;
     width: 100%;
+    h2 {
+        color: #fff;
+        margin: 8px 0;
+        font-size: 18px;
+        text-transform: uppercase;
+        margin-left: 15px;
+    }
 }
 .mm-listitem .mm-btn_fullwidth+a,
 .mm-listitem .mm-btn_fullwidth+span {
@@ -187,12 +204,19 @@ header {
 .mm-menu .mm-navbar a,
 .mm-menu .mm-navbar>* {
     color: #fff;
+    font-size: 18px;
 }
 
 .mm-navbar__title {
     text-transform: uppercase;
     font-weight: bold;
 }
+.mm-menu .mm-listview .mm-btn_next:after,
+.mm-listitem .mm-btn_next:before,
+.mm-menu .mm-btn:after, .mm-menu .mm-btn:before{
+    border-color: #fff !important; 
+}
+
 .badge {
     float: right;
 }
