--- a/src/views/layout/_layout-base.html
+++ b/src/views/layout/_layout-base.html
@@ -33,17 +33,113 @@
 <body class="{% block bodyclass%}{% endblock %}">
 	<div id="page" class="header-mobile {% if current_page == 'category' %}header-category{% endif %}">
 		<div class="header">
-	        <a class="mmenu" href="#menu"><span></span></a>
-	        <img class="" src="assets/images/logo.png" alt="">
-	        <div class="cart pull-right">
-	            Your cart
+	        <a class="mmenu" href="#menu"><i class="fa fa-filter"></i><span>Bộ lọc</span></a>
+	        <div class="container">
+	        	<div class="row">
+		            <div class="col-xs-4 col-sm-2 logo">
+		                <a href="javascript:void(0);" title="">
+		                        <img src="assets/images/logo.png" alt="logo">
+		                    </a>
+		            </div>
+		            <div class="col-xs-12 col-sm-7 col-md-6">
+		                <form class="navbar-form">
+		                    <div class="input-group">
+		                        <input type="text" id="key_search" class="form-control" placeholder="Xin chào, bạn có muốn mua gì không?" name="q">
+		                        <div class="input-group-btn">
+		                            <button id="btn_search" class="btn" type="button"><i class="icon-search">&nbsp</i></button>
+		                        </div>
+		                    </div>
+		                    <div class="result-search scrollbar" id="show-result">
+		                        <ul class="popular-result">
+		                            <li>
+		                                <a href="#">Giày cao gót <span>trong </span><span class="category">Thời trang</span></a>
+		                            </li>
+		                            <li>
+		                                <a href="#">Giày cao gót <span>trong </span><span class="category">Phụ kiện</span></a>
+		                            </li>
+		                            <li>
+		                                <a href="#">Giày cao gót <span>trong </span><span class="category">Sách</span></a>
+		                            </li>
+		                            <li><a href="#">Giày cao gót</a></li>
+		                            <li><a href="#">Giày cao gót</a></li>
+		                            <li><a href="#">Giày cao gót</a></li>
+		                        </ul>
+		                        <div class="recommend-result">
+		                            <p class="title">Sản phẩm gợi ý</p>
+		                            <ul class="list-result">
+		                                <li class="item-result">
+		                                    <a href="#">
+		                                        <div class="wrap-img">
+		                                            <img src="assets/images/upload/product/recommend-1.png" alt="recommend">
+		                                        </div>
+		                                        <div class="information">
+		                                            <p>Giày Cao Gót 7cm Huy Hoàng HH7020 - Đen</p>
+		                                            <p class="price">379.000₫</p> <span>455.000₫</span>
+		                                        </div>
+		                                    </a>
+		                                </li>
+		                                <li class="item-result">
+		                                    <a href="#">
+		                                        <div class="wrap-img">
+		                                            <img src="assets/images/upload/product/recommend-2.png" alt="">
+		                                        </div>
+		                                        <div class="information">
+		                                            <p>Giày Cao Gót Mũi Nhọn Cindydrella L8K - Kem</p>
+		                                            <p class="price">269.000₫ </p> <span>359.000₫</span>
+		                                        </div>
+		                                    </a>
+		                                </li>
+		                                <li class="item-result">
+		                                    <a href="#">
+		                                        <div class="wrap-img">
+		                                            <img src="assets/images/upload/product/recommend-3.png" alt="">
+		                                        </div>
+		                                        <div class="information">
+		                                            <p>Hoa Xương Rồng Nở Trên Giày Cao Gót</p>
+		                                            <p class="price">50.000₫ </p> <span>62.000₫</span>
+		                                        </div>
+		                                    </a>
+		                                </li>
+		                                <li class="item-result">
+		                                    <a href="#">
+		                                        <div class="wrap-img">
+		                                            <img src="assets/images/upload/product/recommend-4.png" alt="">
+		                                        </div>
+		                                        <div class="information">
+		                                            <p>Giày Cao Gót G Alanti GS15-281-172-K - Kem</p>
+		                                            <p class="price">289.000₫ </p> <span>319.000₫</span>
+		                                        </div>
+		                                    </a>
+		                                </li>
+		                                <li class="item-result">
+		                                    <a href="#">
+		                                        <div class="wrap-img">
+		                                            <img src="assets/images/upload/product/recommend-5.png" alt="">
+		                                        </div>
+		                                        <div class="information">
+		                                            <p>Giày Cao Gót G Alanti GS15-290-66-K - Đỏ</p>
+		                                            <p class="price">219.000₫</p> <span>379.000₫</span>
+		                                        </div>
+		                                    </a>
+		                                </li>
+		                            </ul>
+		                        </div>
+		                    </div>
+		                </form>
+		            </div>
+		            <div class="col-xs-8 col-sm-3 col-md-4 hotline">
+		                <div class="row">
+		                    <!-- <div class="col-xs-5 col-sm-6 no-padding"> -->
+		                        <p>Hỗ trợ: <a class="telephone" href="tel:1900 1826" title="">1900 1826 (1)</a></p>
+		                    <!-- </div> -->
+		                    <!-- <div class="col-xs-7 col-sm-6 no-padding"> -->
+		                        <p class="time">(08h00 - 22h00, Thứ 2 - Chủ nhật)</p>
+		                    <!-- </div> -->
+		                </div>
+		            </div>
+		        </div>
 	        </div>
-	        <div class="search-top">
-	            <div class="input-group header-search">
-	                <input aria-label="..." class="form-control input-search" placeholder="" type="text">
-	                <button type="submit" class="btn btn-search">Search</button>
-	            </div>
-	        </div>
+	        
 	        <div id="collapseExample">
 	        <div class="container">
 	            <div class="wrap-slider clearfix">
@@ -74,7 +170,7 @@
 	     
 	    <nav id="{% if current_page == 'category' %}menu{% endif %}">
 	        <ul>
-	        	<li><h2>Gia Dụng</h2></li>
+	        	<li class="title"><h2>Gia Dụng</h2></li>
 	            <li>
 	            	<a href="#">Danh mục</a>
 	            	<ul class="mm-listview">
